[project]
name = "Scribe-i18n"
version = "1.0.0"
description = "Application text localization files for Scribe apps"
readme = "README.md"
requires-python = ">=3.12"

dependencies = []

[dependency-groups]
dev = [
    # Keep docs dependencies formatted in this way with ruff to allow for upgrades via VS Code extension.
    "i18n-check>=1.19.5",
    "prek>=0.4.9",
]

[project.urls]
Homepage = "https://github.com/scribe-org/Scribe-i18n"
